# diagrams-canvas

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.md  LICENSE  README.md  diagrams-canvas.cabal
.github/workflows/: haskell-ci.yml
example/: Sierpinski.hs
examples/: Arrowtest.hs  Circle.hs  Geom.hs  Gradients.hs  Kaleidescope.lhs  README.md  Sierpinski.hs  Text.hs  gears.hs
src/Diagrams/Backend/: Canvas.hs
src/Diagrams/Backend/Canvas/: CmdLine.hs
src/Graphics/Rendering/: Canvas.hs
