Name:                diagrams-canvas
Version:             0.1
Synopsis:            HTML5 canvas backend for diagrams drawing EDSL
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL using an
                     HTML5 canvas.
Homepage:            http://code.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Ryan Yates
Maintainer:          fryguybob@gmail.com
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.8
Source-repository head
  type:     darcs
  location: http://patch-tag.com/r/fryguybob/diagrams-canvas

Library
  Exposed-modules:     Diagrams.Backend.Canvas
                       Diagrams.Backend.Canvas.CmdLine
                       Graphics.Rendering.Canvas
  Hs-source-dirs:      src
  Build-depends:       base >= 4.3 && < 4.5,
                       mtl >= 2.0 && < 3.0,
                       process >= 1.0 && < 1.2,
                       directory >= 1.0 && < 1.2,
                       old-time >= 1.0 && < 1.1,
                       dlist >= 0.5 && < 0.6,
                       vector-space >= 0.7 && < 0.8,
                       NumInstances >= 1.0 && < 1.1,
                       diagrams-core >= 0.5 && < 0.6,
                       diagrams-lib >= 0.5 && < 0.6,
                       cmdargs >= 0.6 && < 0.9,
                       split >= 0.1.2 && < 0.2
  if !os(windows)
    cpp-options: -DCMDLINELOOP
    Build-depends:     unix >= 2.4 && < 2.6
    
test-suite active-tests
    type:              exitcode-stdio-1.0
    main-is:           active-tests.hs
    build-depends:     base >= 4.0 && < 4.6,
                       array >= 0.3 && < 0.5,
                       semigroups >= 0.1 && < 0.9,
                       semigroupoids >= 1.2 && < 1.3,
                       vector-space >= 0.8 && < 0.9,
                       newtype >= 0.2 && < 0.3,

                       QuickCheck >= 2.4.2 && < 2.5
    hs-source-dirs:    src, test
    

