Name:                diagrams-canvas
Version:             0.2
Synopsis:            HTML5 canvas backend for diagrams drawing EDSL
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL using an
                     HTML5 canvas.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Ryan Yates
Maintainer:          byorgey@cis.upenn.edu
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.8
Source-repository head
  type:     git
  location: https://github.com/ku-fpg/diagrams-canvas.git

Library
  Exposed-modules:     Diagrams.Backend.Canvas
                       Diagrams.Backend.Canvas.CmdLine
                       Graphics.Rendering.Canvas
  Hs-source-dirs:      src
  Build-depends:       base >= 4.3 && < 4.6,
                       mtl >= 2.0 && < 3.0,
                       vector-space >= 0.7 && < 0.9,
                       NumInstances >= 1.0 && < 1.1,
                       diagrams-core >= 0.5 && < 0.6,
                       diagrams-lib >= 0.5 && < 0.6,
                       cmdargs >= 0.6 && < 0.11,
                       blank-canvas >= 0.2.1 && < 0.3
